# ML_learn

./: .gitignore
.obsidian/: workspace.json
DL/: Pipfile
DL/pytorch/chapter_installation/: index.ipynb
DL/pytorch/chapter_preliminaries/: linear-algebra.ipynb  ndarray.ipynb  pandas.ipynb
ML/: Dice Coefficient.md  Edge Detection Segmentation.md  Frameworks.md  GPUs.md  Generalization (Classifier).md  Generalization.md  Image Augmentation.md  Implementation of Multilayer Perceptron.md  Instance Segmentation.md  Intersection over Union (IoU).md  Linear Regression.md  Mask R-CNN.md  MindMap.canvas  NN modules.md  Numerical Stability.md  Region Based Segmentation.md  Softmax Regression from scratch.md  Softmax Regression.md  Архитектура ResNet-152.md  Идеи для проекта.md  Команды.md  Линейная алгебра.canvas  Основы теории информации.md  Проект Приоритета.md  Стек изученных алгоритмов.md  Что я сегодня узнала.md
ML/.obsidian/: app.json  community-plugins.json  graph.json  hotkeys.json  workspace.json
ML/Innopolis/material/1 semester/HDDA/labs/week2/: Week2Lab.ipynb  pyproject.toml
ML/Innopolis/material/1 semester/HDDA/labs/week3/: HDDA_Lecture3_Demo_lsr.ipynb  Week 3 Lab.ipynb  pyproject.toml
ML/Innopolis/material/1 semester/HDDA/labs/week3/.ipynb_checkpoints/: HDDA_Lecture3_Demo_lsr-checkpoint.ipynb
ML/Innopolis/material/1 semester/Machine Learning/Labs/lab1/: Lab-1.ipynb  Questions.md  pyproject.toml
ML/Innopolis/material/1 semester/Machine Learning/Labs/lab3/: Lab-3.ipynb  covid_profile.html  pyproject.toml
ML/Innopolis/material/1 semester/Machine Learning/Labs/lab4/: Lab-4.ipynb  pyproject.toml
ML/Innopolis/material/1 semester/venvs/ml-venv/: pyproject.toml
ML/Innopolis/material/1 semester/venvs/ydata_venv/: pyproject.toml
ML/Self-study/: MindMap.canvas
ML/Self-study/Инструменты/: Tools - index.md  d2l.md  git.md  numpy.md  pandas.md
ML/Self-study/Инструменты/torch/: GPUs.md
ML/Self-study/Ресурс/: Энтропия.md
ML/Self-study/Ресурс/Codes/: Linear Regression from scratch.md
ML/Self-study/Ресурс/Generalizations/: Generalization (Deep Learning).md
ML/Self-study/Ресурс/Глубокое обучение/: Convolutional Neural Networks.md  Convolutions.md  NN modules.md
ML/Self-study/Ресурс/Линейная алгебра/: Базис векторного пространства.md  Линейная алгебра.canvas  СЛАУ.md
ML/Self-study/Ресурс/Машинное обучение/: !index.md  Clustering.md  Supervised Learning.md  Unsupervised Learning.md  Weight Decay - Затухание веса.md  k-means clustering.md  k-means.md  Метрики.md  Функции активации.md
ML/Self-study/Ресурс/Статистика/: 2. Дискретный вариационный ряд. Полигон частот и эмпирическая функция распределения.md
ML/Self-study/Ресурс/Теорвер/: Моделирование Multinomial.md
ML/Инструменты/: Linux.md  Object-Oriented Design.md  Visual Code.md  numpy.md  pandas.md  plotly.md  seaborn.md  torch.md
ML/Инструменты/torch/: torch.md  torch.nn.md
ML/Ресурс/: Object-Oriented Design.md
ML/Ресурс/Анализ данных/: Visual Exploration of Data.md  Заметка по анализу данных.md
ML/Ресурс/Глубокое обучение/: Batch Normalization.md  Propagation.md
ML/Ресурс/Глубокое обучение/Архитектуры/: GoogLeNet.md  NiN (Network in Networks).md  Residual Networks (ResNet).md
ML/Ресурс/Глубокое обучение/Компьютерное зрение/: Clustering-based Image Segmentation.md
ML/Ресурс/Линейная алгебра/: Linear Algebra - index.md  Абстрактные векторные пространства.md  Базис векторного пространства.md  Вектор.md  Векторное произведение в 2D.md  Векторное произведение в 3D.md  Композиция матриц.md  Линейная алгебра.canvas  Неквадратные матрицы.md  Определитель.md  Пространство столбцов и ранг.md  СЛАУ.md  Скалярное произведение и двойственность.md  Собственные числа и вектора.md  Собственный базис.md
ML/Ресурс/Математический анализ/: Производная.md
ML/Ресурс/Машинное обучение/: Clustering - Кластеризация.md  Generalization.md  Linear Regression.md  Machine Learning - index.md  Numerical Stability.md  Softmax Regression.md  Weight Decay - Затухание веса.md  Деревья решений.md  Деревья решения.md  Машинное обучение.md  Метрики классификации.md  Многослойный Перцептрон.md  Нормы.md
ML/Ресурс/Машинное обучение/Codes/: Dropout Implementation.md
ML/Ресурс/Машинное обучение/Анализ данных/: Visual Exploration of Data.md
ML/Ресурс/Статистика/: 1. Математическая статистика. Начало.md  2. Дискретный вариационный ряд. Полигон частот и эмпирическая функция распределения.md  3. Интервальный вариационный ряд. Гистограмма относительных частот.md  4. Мода. Медиана. Генеральная и выборочная средняя.md  Корреляция.md  Требования репрезентативной выборки.md
ML/Ресурс/Теорвер/: Распределения.md
src/: Pipfile
src/Calculus/: derivative.ipynb
src/OpenDataScience/: topic_1.ipynb  topic_1_assigment.ipynb  topic_3.ipynb
src/notebooks/: pyproject.toml
src/notebooks/notebooks/: statistics.ipynb
(+89 files in other folders)
