[tool.poetry]
name = "ml-venv"
version = "0.1.0"
description = ""
authors = ["luzinsan <luzinsan@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
jupyter = "^1.1.1"
notebook = "^7.2.2"
numpy = ">=1.16.0,<2.0"
pandas = "^2.2.3"
scikit-learn = ">=1.3.0,<1.4.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
category-encoders = "^2.6.3"
plotly = "^5.24.1"
SQLAlchemy = "^2.0.35"
imblearn = "^0.0"
imbalanced-learn = "^0.12.3"
optuna = "^4.0.0"
optuna-dashboard = "^0.16.2"
phik = "^0.12.4"
stumpy = "^1.13.0"
dash = "^2.18.1"
opencv-python = "^4.10.0.84"
torchvision = "^0.19.1"
gdown = "^5.2.0"
scikit-image = "^0.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

