[tool.poetry]
name = "ydata-venv"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.1.1"
notebook = "^7.2.2"
ydata-profiling = "^4.10.0"
sqlalchemy = "^2.0.35"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
