[tool.poetry]
name = "week2"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
matplotlib = "^3.9.2"
scikit-image = "^0.24.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
