[tool.poetry]
name = "lab3"
version = "0.1.0"
description = ""
authors = ["luzinsan  <luzinsan.a.430-2@e.tusur.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
jupyter = "^1.1.1"
notebook = "^7.2.2"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
sqlalchemy = "^2.0.34"
ydata-profiling = "^4.10.0"
scikit-learn = "^1.5.1"
category-encoders = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
